<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_white">
    <!--<com.wjk.tableview.TableView-->
        <!--android:id="@+id/tableview"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_margin="0dp">-->
    <!--</com.wjk.tableview.TableView>-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divid_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/bg_bgcolor1">
        <cn.jucheng.www.hulisiwei.customcontrols.FitHeightTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="@color/vfrontc"
            android:textSize="@dimen/text_size18"
            android:text="@string/序号"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divid_line"/>
        <cn.jucheng.www.hulisiwei.customcontrols.FitHeightTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:textColor="@color/vfrontc"
            android:textSize="@dimen/text_size18"
            android:text="@string/医嘱内容"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divid_line"/>
        <cn.jucheng.www.hulisiwei.customcontrols.FitHeightTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:textColor="@color/vfrontc"
            android:textSize="@dimen/text_size18"
            android:text="@string/出口状态"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divid_line"/>
        <cn.jucheng.www.hulisiwei.customcontrols.FitHeightTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:textColor="@color/vfrontc"
            android:textSize="@dimen/text_size18"
            android:text="@string/出口概率"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divid_line"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/lstzg"
        android:divider="@null" />
</LinearLayout>
